--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,12 +48,17 @@
     <string name="loading_results_message">Loading results...</string>
     <string name="no_data_found">No data found</string>
     <string name="title_artworks">Artworks</string>
-    <string name="title_search">Search the Art World</string>
+    <string name="title_search">Search</string>
     <string name="title_favorites">Favorites</string>
     <string name="information_label">Information</string>
     <string name="museum_label">Museum</string>
     <string name="menu_share">Share</string>
     <string name="artist_label">Artist</string>
     <string name="similar_artworks_label">Similar Artworks</string>
-    
+    <string name="Content_Description">Content Description</string>
+    <string name="action_gene">Gene</string>
+    <string name="action_show">Show</string>
+    <string name="action_none">All</string>
+    <string name="image">Image</string>
+
 </resources>
